--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -58%);
+            transform: translate(-50%, -45%);
             pointer-events: none;
             z-index: 5;
         }
@@ -5976,7 +5976,7 @@ body.modal-open{
             <div class="header-logo-wrapper">
                 <img src="logo.png" alt="TabulaGo" class="header-logo">
             </div>
-            <p class="subtitle">Takımını Kur, Kelimeleri Anlat, Kazan!</p>
+            <p class="subtitle">.</p>
         </header>
         
         <!-- ===== EKRANLAR ===== -->
