--- a/index.html
+++ b/index.html
@@ -6481,11 +6481,11 @@ body.modal-open{ overflow: hidden; }
                 <button class="control-btn-mobile correct-btn-mobile" id="correctBtn">
                     <i class="fas fa-check"></i> Doğru (+1)
                 </button>
+				                <button class="control-btn-mobile forbidden-btn-mobile" id="forbiddenBtn">
+                    <i class="fas fa-times"></i> Yasak (-1)
+                </button>
                 <button class="control-btn-mobile pass-btn-mobile" id="passBtn">
                     <i class="fas fa-forward"></i> Pas (Kalan: <span id="passCount">3</span>)
-                </button>
-                <button class="control-btn-mobile forbidden-btn-mobile" id="forbiddenBtn">
-                    <i class="fas fa-times"></i> Yasak (-1)
                 </button>
                 <button class="control-btn-mobile pause-btn-mobile" id="pauseBtn">
                     <i class="fas fa-pause"></i> Duraklat
@@ -6809,7 +6809,7 @@ body.modal-open{ overflow: hidden; }
 </div>
 
 
-    <div class="quit-title">Oyundan Çıkmak Üzeresiniz</div>
+    <div class="quit-title">Oyundan Çıkmak Üzeresiniz!</div>
     <div class="quit-text">
       Oyundan çıkarsanız mevcut oyun sonlanır.<br>
       Emin misiniz?
