--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta property="og:description" content="Arkadaşlarınızla birlikte oynayabileceğiniz eğlenceli takım kelime oyunu" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="tr_TR" />
+  <script src="words.js"></script>
   <!-- Domainin varsa aç -->
   <!-- <meta property="og:url" content="https://siteadresin.com/" /> -->
   <!-- <meta property="og:image" content="og-image.png" /> -->
@@ -10063,4 +10064,5 @@ window.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
